tests/frontend/fail/array/composite_array_mismatch2.act
constructor of A
interface constructor()

creates

  uint[3][2][2] x := [ [ [0,0,0], [0,0,0] ], [ [0,0,0], [0,0,0] ] ]

behaviour f of A
interface f(bool[3][2] a)

storage

  x => [a, [ [0,0,0], [0,0,0] ] ]
